# healthcare_planning

./: .gitignore  Dockerfile  README.md
problem_1/: domain.pddl  domain1_supply_p.pddl  domain2.pddl  domain2_supply_t.pddl  domain3_multi_accompany.pddl  problem.pddl  problem.pddl.plan  problem1.pddl  problem2.pddl  problem2.pddl.plan  problem3.pddl  problem4.pddl
problem_1/old_problems/: problem2.pddl  problem3.pddl
problem_1/supplies_as_predicates/: domain_pred.pddl  problem1.pddl  problem3.pddl  problem4.pddl
problem_2/: domain.pddl  problem.pddl  problem1.pddl  problem2.pddl  problem3.pddl  problem4.pddl
problem_2/old_problems/: problem.pddl
problem_3/: domain.hddl  problem.hddl  problem1.hddl  problem2.hddl  problem3.hddl  problem4.hddl
problem_3/planner_out/: planner_output1.txt  planner_output2.txt  planner_output3.txt  planner_output4.txt
problem_4/: domain.pddl  problem.pddl  problem1.pddl  problem2.pddl  problem3.pddl  problem4.pddl
problem_4/planner_out/: planner_optic_output1.txt  planner_optic_output2.txt  planner_optic_output3.txt  planner_optic_output4.txt  planner_tfd_output1.txt  planner_tfd_output2.txt  planner_tfd_output3.txt  planner_tfd_output4.txt
problem_5/: CMakeLists.txt  package.xml
problem_5/launch/: example.launch.py
problem_5/pddl/: domain.pddl  problem.pddl  problem.txt
problem_5/src/: accompany_node.cpp  example_node.cpp  fly_carrier_node.cpp  load_carrier_node.cpp  move_carrier_node.cpp  move_carrier_shield_node.cpp  move_node.cpp  move_shield_node.cpp  start_accompany_node.cpp  unload_carrier_node.cpp
problem_5_ws/src/problem_5/pddl/: problem.txt
problem_5_ws/src/problem_5/src/: fly_carrier_node.cpp  load_carrier_node.cpp  move_carrier_shield_node.cpp  move_node.cpp  start_accompany_node.cpp
